--- a/src/components/About/style.css
+++ b/src/components/About/style.css
@@ -1,5 +1,1 @@
-/* .body {
-  max-width: 700px; 
-  margin-top: 50px;
-  padding-left: 200px;
-} */
+
