--- a/src/components/Image/style.css
+++ b/src/components/Image/style.css
@@ -1,4 +1,1 @@
-#picture {
-  margin-bottom: 25px;
-  float: left;
-}
+
